# agentictrading

./: .env.example  .env.staging  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  IDEAS.md  LICENSE  OPERATIONS.md  README.md  SECURITY.md  SUPPORT.md  agentictrading_env_staging_prefilled.env  config.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: accelerated_multi_venue_runbook.md  active_prompt_set_v1.md  active_prompt_set_v2.md  autonomous_paper_candidates.md  autonomous_paper_runbook.md  dashboard_backend_gaps_remaining.md  dashboard_contract_v2.md  dashboard_final_refactor_status.md  dashboard_ia_v1.md  dashboard_operator_panels_v1.md  dashboard_page_map_v1.md  dashboard_schema_drift_fixes.md  family_exhaustion_policy_v2.md  fast_multi_venue_status.md  goldfish_dna_audit.md  goldfish_dna_examples_v1.md  goldfish_dna_schema_v1.md  goldfish_dna_usage_v1.md  goldfish_memory_usage_v2.md  high_roi_candidate_review.md  operator_status.json  paper_accounting_model_scope.md  paper_gate_audit_v3.md  paper_gate_policy_v3.md  paper_holdoff_policy_v1.md  paper_promotion_policy_v2.md  paper_unvalidated_family_audit.md  preflight_report.json  prompt_diff_summary_v2.md  revival_and_holdoff_validation.json  revival_lineage_proof_v2.md  shadow_cycle_result.json
certs/: README.md
config/: mob.target-state.toml
dashboard/: app.js  index.html  styles.css
dashboard-ui/: index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  EXTRACTION_PLAN.md  GITHUB_REPO_SETUP.md  OPEN_SOURCE_BOUNDARY.md  ROADMAP.md
(+1987 files in other folders)
